Fix issue with footer placement on IE

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ body{
 }
 
 .game{
-    flex: 1;
+    flex-grow: 1;
 }
 
 /* header section*/
